crates/stateset-core/tests/snapshots/snapshot_serialization__customer_status_variants.snap
---
source: crates/stateset-core/tests/snapshot_serialization.rs
assertion_line: 141
expression: statuses
---
[
  "active",
  "inactive",
  "suspended"
]
