crates/stateset-core/tests/snapshots/snapshot_serialization__fraud_decision_variants.snap
---
source: crates/stateset-core/tests/snapshot_serialization.rs
expression: variants
---
[
  "accept",
  "review",
  "reject"
]
