crates/stateset-core/tests/snapshots/snapshot_serialization__gift_card_status_variants.snap
---
source: crates/stateset-core/tests/snapshot_serialization.rs
expression: variants
---
[
  "active",
  "depleted",
  "expired",
  "disabled"
]
