crates/stateset-core/tests/snapshots/snapshot_serialization__gift_card_transaction_type_variants.snap
---
source: crates/stateset-core/tests/snapshot_serialization.rs
expression: variants
---
[
  "charge",
  "refund",
  "adjustment"
]
