crates/stateset-core/tests/snapshots/snapshot_serialization__inventory_transaction_types.snap
---
source: crates/stateset-core/tests/snapshot_serialization.rs
assertion_line: 181
expression: types
---
[
  "receipt",
  "shipment",
  "adjustment",
  "transfer",
  "return",
  "allocation",
  "deallocation",
  "cycle_count"
]
