crates/stateset-core/tests/snapshots/snapshot_serialization__loyalty_program_status_variants.snap
---
source: crates/stateset-core/tests/snapshot_serialization.rs
expression: variants
---
[
  "active",
  "paused",
  "archived"
]
