crates/stateset-core/tests/snapshots/snapshot_serialization__loyalty_transaction_type_variants.snap
---
source: crates/stateset-core/tests/snapshot_serialization.rs
expression: variants
---
[
  "earn",
  "redeem",
  "adjust",
  "expire",
  "bonus",
  "refund"
]
