crates/stateset-core/tests/snapshots/snapshot_serialization__order.snap
---
source: crates/stateset-core/tests/snapshot_serialization.rs
assertion_line: 131
expression: order
---
{
  "id": "01234567-89ab-cdef-0123-456789abcdef",
  "order_number": "ORD-2025-001",
  "customer_id": "fededcba-9876-5432-fede-dcba98765432",
  "status": "confirmed",
  "order_date": "2025-06-15T12:00:00Z",
  "total_amount": "65.47",
  "currency": "USD",
  "payment_status": "paid",
  "fulfillment_status": "unfulfilled",
  "payment_method": "credit_card",
  "shipping_method": "standard",
  "tracking_number": null,
  "notes": null,
  "shipping_address": {
    "line1": "123 Main St",
    "line2": null,
    "city": "San Francisco",
    "state": "CA",
    "postal_code": "94102",
    "country": "US"
  },
  "billing_address": null,
  "items": [
    {
      "id": "11112222-3333-4444-5555-666677778888",
      "order_id": "01234567-89ab-cdef-0123-456789abcdef",
      "product_id": "aaaabbbb-cccc-dddd-eeee-ffff00001111",
      "variant_id": null,
      "sku": "TEST-SKU-001",
      "name": "Test Widget",
      "quantity": 2,
      "unit_price": "29.99",
      "discount": "5.00",
      "tax_amount": "4.50",
      "total": "54.98"
    }
  ],
  "version": 1,
  "created_at": "2025-06-15T12:00:00Z",
  "updated_at": "2025-06-15T12:00:00Z"
}
