crates/stateset-core/tests/snapshots/snapshot_serialization__order_status_variants.snap
---
source: crates/stateset-core/tests/snapshot_serialization.rs
assertion_line: 47
expression: statuses
---
[
  "pending",
  "confirmed",
  "processing",
  "shipped",
  "delivered",
  "cancelled",
  "refunded"
]
