crates/stateset-core/tests/snapshots/snapshot_serialization__payment_status_variants.snap
---
source: crates/stateset-core/tests/snapshot_serialization.rs
assertion_line: 61
expression: statuses
---
[
  "pending",
  "authorized",
  "paid",
  "partially_paid",
  "refunded",
  "partially_refunded",
  "failed"
]
